test_error_concealment added
Change-Id: I0f67ef190ca00cbf6addcb3afd78878f01c7b395

--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -259,6 +259,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_error_concealment.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_error_resolution.cpp"
 					>
 				</File>
