--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -261,6 +261,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_error_concealment.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_error_resolution.cpp"
 					>
 				</File>
