test_copy_set_reference added
test_copy_set_reference added to ensure
that VP8_COPY_REFERENCE and
VP8_SET_REFERENCE function properly

Change-Id: I9b03ad5742d141d0be75dd8a53abfbf76720076d

--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -245,6 +245,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_copy_set_reference.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_data_rate.cpp"
 					>
 				</File>
