--- a/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
@@ -243,6 +243,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_copy_set_reference.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_data_rate.cpp"
 					>
 				</File>
