--- a/MasterFile/Vp8TestProgram_64Bit_icc(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit_icc(2008).vcproj
@@ -245,6 +245,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_copy_set_reference.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_data_rate.cpp"
 					>
 				</File>
