test_multi_resolution_encode added - w/ yv12/i420 fix
-test_multi_resolution_encode added.
-psnr functions updated to accomodate resizing when necessary.
-vpxt_compress_multi_resolution added to preform multi res encodes.
-yv12/i420 psnr bug fix

Change-Id: I1cee9f97d6e46cc16bfa3adb5875460e59513dc4

--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New32Bit_icc(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New32Bit_icc(2008).vcproj
@@ -230,6 +230,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\MasterFile\src\util\vpx\cpu_id.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\MasterFile\src\util\vpx\EbmlWriter.cpp"
 						>
 					</File>
@@ -247,6 +251,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\MasterFile\src\util\vpx\nestegg.c"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\MasterFile\src\util\vpx\scale.cpp"
 						>
 					</File>
 					<File
