--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New64Bit_icc(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New64Bit_icc(2008).vcproj
@@ -397,6 +397,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\MasterFile\src\util\vpx\cpu_id.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\MasterFile\src\util\vpx\EbmlWriter.cpp"
 						>
 					</File>
@@ -414,6 +418,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\MasterFile\src\util\vpx\nestegg.c"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\MasterFile\src\util\vpx\scale.cpp"
 						>
 					</File>
 					<File
