--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit(2008).vcproj
@@ -230,6 +230,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\MasterFile\src\util\vpx\cpu_id.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\MasterFile\src\util\vpx\EbmlWriter.cpp"
 						>
 					</File>
@@ -247,6 +251,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\MasterFile\src\util\vpx\nestegg.c"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\MasterFile\src\util\vpx\scale.cpp"
 						>
 					</File>
 					<File
