--- a/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
@@ -359,6 +359,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_temporal_scalability.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_test_vector.cpp"
 					>
 				</File>
@@ -459,6 +463,10 @@
 					</File>
 					<File
 						RelativePath=".\src\util\vpx\vp8_multi_resolution_encoder.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\src\util\vpx\vp8_scalable_patterns.cpp"
 						>
 					</File>
 					<File
