test_new_vs_old_temp_scale added
test_new_vs_old_temp_scale added,
test_new_vs_old_psnr updated,
test_new_vs_old_enc_cpu_tick updated

Change-Id: I255dafbe031188c231eb44b6a00d0f304a45cc38

--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -331,6 +331,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_new_vs_old_temp_scale.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_noise_sensitivity.cpp"
 					>
 				</File>
