--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -333,6 +333,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_new_vs_old_temp_scale.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_noise_sensitivity.cpp"
 					>
 				</File>
