--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -351,6 +351,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_post_processor_mfqe.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_reconstruct_buffer.cpp"
 					>
 				</File>
